# looptic

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  code.py  memory.x  rust-toolchain.toml
.cargo/: config.toml
docs/: internals.md  sampler-architecture.md  song-storage.md  user-guide.md
samples/: README.md
scripts/: check-firmware-layout.sh
src/: flash_storage.rs  lib.rs  load_control.rs  main.rs  sample_assets.rs
tests/: storage_backend.rs
