[package]
name = "looptic"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Embassy firmware for the LoopTic MacroPad RP2040 sequencer"
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "looptic"
path = "src/main.rs"
test = false
bench = false

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"
codegen-units = 1

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { version = "=0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "=1.0.1"
defmt-rtt = "=1.0.0"
embassy-executor = { version = "=0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "=0.10.0", features = ["rp2040", "time-driver", "critical-section-impl", "defmt"] }
embassy-sync = { version = "=0.8.0", features = ["defmt"] }
embassy-time = { version = "=0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-graphics = "=0.8.1"
fixed = "=1.28.0"
heapless = "=0.9.1"
panic-probe = { version = "=1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "=1.13.1", features = ["critical-section"] }
sh1106 = "=0.5.0"
smart-leds = "=0.4.0"
static_cell = "=2.1.1"
