[package]
name = "looptic"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Embassy firmware for the LoopTic MacroPad RP2040 sequencer"
publish = false
build = "build.rs"

[features]
default = ["firmware"]
# This marker keeps the RP2040-only binary out of host integration-test builds.
firmware = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "looptic"
path = "src/main.rs"
test = false
bench = false
required-features = ["firmware"]

[profile.release]
debug = 2
lto = "fat"
# Audio rendering is deadline-bound and the RP2040 has ample flash headroom.
# Optimize the firmware for execution speed instead of minimum code size.
opt-level = 3
codegen-units = 1

[dependencies]
postcard = { version = "=1.1.3", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }

[dev-dependencies]
embedded-storage-async = "=0.4.1"
sequential-storage = { version = "=8.0.0", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { version = "=0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "=1.0.1"
defmt-rtt = "=1.0.0"
embassy-embedded-hal = "=0.6.0"
embassy-executor = { version = "=0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "=0.10.0", features = ["rp2040", "time-driver", "critical-section-impl", "defmt"] }
embassy-sync = { version = "=0.8.0", features = ["defmt"] }
embassy-time = { version = "=0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-graphics = "=0.8.1"
fixed = "=1.28.0"
heapless = "=0.9.1"
panic-probe = { version = "=1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "=1.13.1", features = ["critical-section"] }
sequential-storage = { version = "=8.0.0", default-features = false }
sh1106 = "=0.5.0"
smart-leds = "=0.4.0"
static_cell = "=2.1.1"
